--- a/OfficialSnippets/TinySearchbar/manifest.json
+++ b/OfficialSnippets/TinySearchbar/manifest.json
@@ -5,6 +5,7 @@
     "main": "./code.css",
     "readme": "./readme.md",
     "added": "2021-08-27T21:09:50.014Z",
+    "github": "https://github.com/Strencher/BD-MiniThemes/tree/main/OfficialSnippets/TinySearchbar",
     "previews": [
         "https://i.imgur.com/FYD9jvJ.png"
     ]
